--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,17 @@
-/* GLOBAL */
-@import "./common/variables.scss";
-@import "./common/global.scss";
-@import "./common/fonts.scss";
+// Vendor
+// ---------------------------------
 
-/* BLOCKS */
-@import "./blocks/header.scss";
+@import "vendor/normalize";
+
+// Base ---------------------------------
+
+@import "./base/variables";
+@import "./base/mixins";
+@import "./base/fonts";
+@import "./base/fonts-styles";
+@import "./base/page";
+@import "./base/visually-hidden";
+@import "./base/container";
+
+// Blocks ---------------------------------
+// @import "./blocks/button";
