--- a/source/styles/base/variables.scss
+++ b/source/styles/base/variables.scss
@@ -9,11 +9,12 @@ $color-white: #ffffff;
 $color-gray: #999999;
 $color-dark: #333333;
 
-$color-title: #9D8665;
-$color-text-acctnt: #CAAA7D;
+$color-accent: #9D8665;
 
+$color-text-acctnt: #CAAA7D;
+$color-active: #7E6C51;
 $color-bg-dark: #030303;
-$color-bg-light: #DBDBDB;
+// $color-bg-light: #DBDBDB;
 
 $color-btn: #710707;
 $color-point: #D2B183;
