--- a/source/styles/base/fonts-styles.scss
+++ b/source/styles/base/fonts-styles.scss
@@ -1,9 +1,23 @@
 .title {
   @include font-title($size: 80px, $line-height: 90px);
-text-transform: uppercase;
+  text-transform: uppercase;
 
-&--section {
-    color:$color-title;
+  &--section {
+    color: $color-accent;
+  }
+
+  &--underline {
+    position: relative;
+    padding-bottom: 25px;
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 2px;
+      background-color: $color-line;
+    }
   }
 
   @include media-desktop {
@@ -21,12 +35,12 @@ text-transform: uppercase;
   }
 }
 
-.txt-base {
-  @include font($size: 18px, $line-height: 38.5px,  $weight: 400, $spacing: 0);
+.text-base {
+  @include font($size: 18px, $weight: 400, $spacing: 0);
 }
 
 .subtitle {
-  @include font($size: 28px);
+  @include font($size: 28px, $color: $color-white);
 
   @include media-desktop {
     font-size: 24px;
@@ -40,8 +54,8 @@ text-transform: uppercase;
   }
 }
 
-.txt-btn {
-  @include font($size: 22px);
+.text-btn {
+  @include font($size: 22px, $color: $color-white);
 
   @include media-desktop {
     font-size: 20px;
@@ -55,8 +69,10 @@ text-transform: uppercase;
   }
 }
 
-.txt-nav {
-  @include font($size: 22px, $weight: 100);
+.text-nav {
+  @include font($size: 22px, $weight: 100, $color: $color-white);
+
+  text-decoration: none;
 
   // @include media-desktop {
   //   font-size: 20px;
@@ -70,8 +86,9 @@ text-transform: uppercase;
   }
 }
 
-.txt-logo {
+.text-logo {
   @include font-title($size: 28px);
+  text-transform: uppercase;
 
   // @include media-desktop {
   //   font-size: 20px;
@@ -88,25 +105,42 @@ text-transform: uppercase;
 
 .title-card {
   @include font-title($size: 32px, $color: $color-black);
+  text-transform: uppercase;
 
-  @include media-desktop {
-    font-size: 28px;
-  letter-spacing: 0.03em;
-  }
+  &--underline {
+    position: relative;
+    padding-bottom: 10px;
 
-  @include media-tablet {
-    font-size: 22px;
-  }
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      // right: 0;
+      bottom: 0;
+      height: 2px;
+      width: 300px;
+      background-color: $color-line;
+    }
 
-  @include media-mobile {
-    font-size: 18px;
+    @include media-desktop {
+      font-size: 28px;
+      letter-spacing: 0.03em;
+    }
+
+    @include media-tablet {
+      font-size: 22px;
+    }
+
+    @include media-mobile {
+      font-size: 18px;
       letter-spacing: 0.05em;
+    }
   }
 }
 
-.txt-thin {
+.text-thin {
   @include font($size: 22px, $weight: 100, $spacing: 0);
-text-decoration: none;
+  text-decoration: none;
 
   @include media-desktop {
     font-size: 20px;
@@ -120,7 +154,7 @@ text-decoration: none;
   }
 }
 
-.txt-mini {
+.text-mini {
   text-decoration: none;
 
   @include font($size: 18px, $weight: 100, $spacing: 0);
@@ -130,8 +164,13 @@ text-decoration: none;
   }
 }
 
-.txt-light {
+.text-light {
   @include font($size: 22px, $line-height: 38.5px, $spacing: 0);
+
+  text-decoration: none;
+  &--bg-dark {
+color: $color-white;
+  }
 
   @include media-desktop {
     font-size: 20px;
@@ -146,8 +185,7 @@ text-decoration: none;
   }
 }
 
-
-.txt-bold {
+.text-bold {
   @include font($size: 28px, $weight: 700, $spacing: 0);
 
   @include media-mobile {
@@ -155,7 +193,7 @@ text-decoration: none;
   }
 }
 
-.txt-address {
+.text-address {
   @include font($size: 28px, $weight: 500, $spacing: 0);
 
   @include media-desktop {
@@ -171,8 +209,8 @@ text-decoration: none;
   }
 }
 
-.txt-copyright {
-  @include font($size: 22px, $line-height: 22px, $weight: 100);
+.text-copyright {
+  @include font($size: 22px, $line-height: 22px, $weight: 100, $color: $color-white);
 
   @include media-mobile {
     font-size: 16px;
