--- a/source/styles/base/page.scss
+++ b/source/styles/base/page.scss
@@ -1,23 +1,41 @@
 .page {
   /*  для стики-футера */
-  height: 100%;
+  // height: 100%;
   scroll-behavior: smooth;
 }
 
 .page__body {
-  position: relative;
+  // position: relative;
   margin: 0 auto;
   min-width: $mobile-width;
 
+  background-color: $color-white;
+
   /*  для стики-футера */
-  display: flex;
-  min-height: 100%;
-  flex-direction: column;
+  // display: flex;
+  // min-height: 100%;
+  // flex-direction: column;
 }
 
 
-.page__main {
-  /*  для стики-футера */
-  flex-grow: 1;
+// .page__main {
+//   /*  для стики-футера */
+//   flex-grow: 1;
+// }
+
+// * {
+//   outline: auto;
+// }
+
+.page__decor {
+margin: 0 auto;
+// max-width: $large-width;
 }
 
+.page__img {
+display: block;
+  width: 100%;
+  height: 400px;
+  background-color: antiquewhite;
+    object-fit: cover;
+}
