--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -14,4 +14,16 @@
 @import "./base/container";
 
 // Blocks ---------------------------------
-// @import "./blocks/button";
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/welcome.scss";
+@import "./blocks/button.scss";
+@import "./blocks/visiting.scss";
+@import "./blocks/explore.scss";
+@import "./blocks/video.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/tickets.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/footer.scss";
+ 
