feat: footer & video

--- a/source/styles/base/variables.scss
+++ b/source/styles/base/variables.scss
@@ -11,7 +11,7 @@ $color-dark: #333333;
 
 $color-accent: #9D8665;
 
-$color-text-acctnt: #CAAA7D;
+$color-text-accent: #CAAA7D;
 $color-active: #7E6C51;
 $color-bg-dark: #030303;
 // $color-bg-light: #DBDBDB;
