--- a/source/styles/base/variables.scss
+++ b/source/styles/base/variables.scss
@@ -14,7 +14,8 @@ $color-accent: #9D8665;
 $color-text-accent: #CAAA7D;
 $color-active: #7E6C51;
 $color-bg-dark: #030303;
-// $color-bg-light: #DBDBDB;
+$color-icon-video: #B3B3B3;
+$color-icon-video-hover: #989898;
 
 $color-btn: #710707;
 $color-point: #D2B183;
