feat: add styled range-bar & form

--- a/source/styles/base/variables.scss
+++ b/source/styles/base/variables.scss
@@ -23,6 +23,8 @@ $color-point: #D2B183;
 $color-line: #710707;
 $color-icon-line: #666666;
 
+$color-disabled: #d1d1d1;
+
 $color-error: #ff5e66;
 
 // WIDTH
