--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -16,8 +16,8 @@ gap: 198px;
   display: block;
   width: 960px;
   height: 620px;
-  object-fit: contain;
-  background-color: antiquewhite;
+  object-fit: cover;
+  // background-color: antiquewhite;
 }
 
 .contacts__address  {
