--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -26,4 +26,5 @@
 @import "./blocks/tickets.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/footer.scss";
- 
+@import "./blocks/form.scss";
+
