--- a/source/styles/base/fonts-styles.scss
+++ b/source/styles/base/fonts-styles.scss
@@ -56,7 +56,7 @@
 
 .text-btn {
   @include font($size: 22px, $color: $color-white);
-
+text-decoration: none;
   @include media-desktop {
     font-size: 20px;
   }
