--- a/source/styles/base/page.scss
+++ b/source/styles/base/page.scss
@@ -37,5 +37,5 @@ display: block;
   width: 100%;
   height: 400px;
   background-color: antiquewhite;
-    object-fit: contain;
+    object-fit: cover;
 }
