--- a/source/styles/base/page.scss
+++ b/source/styles/base/page.scss
@@ -17,7 +17,6 @@
   // flex-direction: column;
 }
 
-
 // .page__main {
 //   /*  для стики-футера */
 //   flex-grow: 1;
@@ -27,15 +26,16 @@
 //   outline: auto;
 // }
 
-.page__decor {
-margin: 0 auto;
-// max-width: $large-width;
-}
-
-.page__img {
-display: block;
-  width: 100%;
+.page__parallax {
+  margin: 0 auto;
+  width: auto;
   height: 400px;
   background-color: antiquewhite;
-    object-fit: cover;
+  // background-size: 1920px 1102px;
+  background-size: cover;
+
+  background-position:center ;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-image: url("../../images/parallax/parallax-2x.webp");
 }
