--- a/source/styles/base/mixins.scss
+++ b/source/styles/base/mixins.scss
@@ -3,7 +3,7 @@
   $line-height: 100%,
   $weight: 300,
   $color: $color-black,
-  $spacing: 0.02em
+  $spacing: 2px
 ) {
   margin-top: 0;
   margin-bottom: 0;
@@ -19,7 +19,7 @@
   $size,
   $line-height: 100%,
   $color: $color-white,
-  $spacing: 0.05em
+  $spacing: 5px
 ) {
   margin-top: 0;
   margin-bottom: 0;
