--- a/source/styles/blocks/gallery.scss
+++ b/source/styles/blocks/gallery.scss
@@ -12,7 +12,7 @@
   position: relative;
   overflow-y: hidden;
 
-  background-color: aquamarine;
+  // background-color: aquamarine;
   &::after {
     content: "";
     position: absolute;
