--- a/source/styles/base/fonts-styles.scss
+++ b/source/styles/base/fonts-styles.scss
@@ -8,14 +8,14 @@
 
   &--underline {
     position: relative;
-    padding-bottom: 25px;
+    padding-bottom: 29px;
     &::after {
       content: "";
       position: absolute;
       left: 0;
       right: 0;
       bottom: 0;
-      height: 2px;
+      height: 3px;
       background-color: $color-line;
     }
   }
@@ -40,7 +40,7 @@
 }
 
 .subtitle {
-  @include font($size: 28px, $color: $color-white);
+  @include font($size: 28px, $color: $color-white, $spacing: 3.55px);
 
   @include media-desktop {
     font-size: 24px;
@@ -55,7 +55,7 @@
 }
 
 .text-btn {
-  @include font($size: 22px, $color: $color-white);
+  @include font($size: 22px, $color: $color-white, $spacing: 3.5px);
 text-decoration: none;
   @include media-desktop {
     font-size: 20px;
@@ -70,7 +70,7 @@ text-decoration: none;
 }
 
 .text-nav {
-  @include font($size: 22px, $weight: 100, $color: $color-white);
+  @include font($size: 22px, $weight: 100, $color: $color-white, $spacing: 3.1px);
 
   text-decoration: none;
 
@@ -87,7 +87,7 @@ text-decoration: none;
 }
 
 .text-logo {
-  @include font-title($size: 28px);
+  @include font-title($size: 28px, $spacing: 5px);
   text-transform: uppercase;
 
   // @include media-desktop {
@@ -109,7 +109,7 @@ text-decoration: none;
 
   &--underline {
     position: relative;
-    padding-bottom: 10px;
+    padding-bottom: 14px;
 
     &::after {
       content: "";
@@ -139,7 +139,7 @@ text-decoration: none;
 }
 
 .text-thin {
-  @include font($size: 22px, $weight: 100, $spacing: 0);
+  @include font($size: 22px, $weight: 100, $spacing: 1px);
   text-decoration: none;
 
   @include media-desktop {
@@ -157,7 +157,7 @@ text-decoration: none;
 .text-mini {
   text-decoration: none;
 
-  @include font($size: 18px, $weight: 100, $spacing: 0);
+  @include font($size: 18px, $weight: 100, $spacing: 1px);
 
   @include media-desktop {
     font-size: 16px;
@@ -165,7 +165,7 @@ text-decoration: none;
 }
 
 .text-light {
-  @include font($size: 22px, $line-height: 38.5px, $spacing: 0);
+  @include font($size: 22px, $line-height: 38.5px, $spacing: 1.1px);
 
   text-decoration: none;
   &--bg-dark {
@@ -186,7 +186,7 @@ color: $color-white;
 }
 
 .text-bold {
-  @include font($size: 28px, $weight: 700, $spacing: 0);
+  @include font($size: 28px, $weight: 700, $spacing: 1.5);
 
   @include media-mobile {
     font-size: 16px;
@@ -194,7 +194,7 @@ color: $color-white;
 }
 
 .text-address {
-  @include font($size: 28px, $weight: 500, $spacing: 0);
+  @include font($size: 28px, $weight: 500, $spacing: 1.8px, $line-height: 112%);
 
   @include media-desktop {
     font-size: 24px;
@@ -210,7 +210,7 @@ color: $color-white;
 }
 
 .text-copyright {
-  @include font($size: 22px, $line-height: 22px, $weight: 100, $color: $color-white);
+  @include font($size: 22px, $line-height: 22px, $weight: 100, $color: $color-white, $spacing: 3.1px);
 
   @include media-mobile {
     font-size: 16px;
