--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding-top: 75px;
+  padding-top: 84px;
   padding-bottom: 50px;
   background-color: $color-bg-dark;
   padding-bottom: 500px;
@@ -9,20 +9,30 @@
   display: flex;
   align-items: flex-start;
   border-bottom: 3px solid $color-icon-line;
-  padding-bottom: 50px;
-}
+  padding-bottom: 47px;
+ }
 
 .footer__nav {
   @include list-reset;
+   margin-left: 141px;
+  margin-top: 6px;
+
   display: flex;
-  margin-left: 145px;
-  flex-direction: column;
-  gap: 25px 150px;
+   flex-direction: column;
+  gap: 29px 150px;
   flex-wrap: wrap;
 
-  justify-content: flex-start;
+  // justify-content: flex-start;
+    align-items: flex-start;
+
   height: 128px;
-  width: 694px;
+  width: 363px;
+  max-width: 680px;
+
+.nav__item {
+  flex-grow: 0;
+  width: 107px;
+}
 }
 
 .footer__social {
@@ -30,7 +40,9 @@
   display: flex;
   gap: 25px;
   flex-wrap: wrap;
+  margin-top: auto;
   margin-left: auto;
+  margin-bottom: 8px;
 }
 
 .footer__social-item {
@@ -113,4 +125,8 @@
   padding-top: 50px;
   display: flex;
   justify-content: space-between;
+}
+
+.footer__copyright:last-child {
+  margin-right: 19px;
 }
