--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -2,6 +2,9 @@
   display: flex;
   gap: 240px;
   justify-content: space-between;
+  align-items: flex-start;
+
+  margin-top: 2px;
 }
 
 .form__checkmark {
@@ -42,7 +45,6 @@ background-color: $color-black;  }
 .form__wrapper-amount {
   flex-shrink: 0;
   flex-grow: 0;
-
   width: 150px;
 }
 
@@ -53,28 +55,30 @@ background-color: $color-black;  }
 }
 
 .form__wrapper-type .form__title {
-  margin-bottom: 50px;
+  margin-bottom: 48px;
 }
 
 .form__wrapper-amount .form__title {
-  margin-bottom: 25px;
+  text-align: end;
+  margin-bottom: 23px;
 }
 
 .form__label {
   display: flex;
-  margin-bottom: 25px;
+  margin-bottom: 12px;
   gap: 23px;
   align-items: center;
+  letter-spacing: 1.25px;
 }
 
 .form__text {
-  margin-bottom: 15px;
+  margin-bottom: 8px;
 }
 
 .form__wrapper-counter {
-  padding: 6px 14px;
+  padding: 4px 14px;
   border: 3px solid $color-black;
-  margin-bottom: 10px;
+  margin-bottom: 3px;
 
   display: flex;
   align-items: center;
@@ -114,7 +118,10 @@ input[type="number"] {
 }
 
 .form__price {
-  margin-top: 50px;
+  margin-top: 52px;
+  text-align: end;
+    letter-spacing: 2.1px;
+
 }
 
 .form__btn {
@@ -124,8 +131,10 @@ input[type="number"] {
   background-color: $color-black;
   padding: 6px 38px;
   width: 175px;
-  margin-top: 52px;
+  margin-top: 62px;
   margin-left: auto;
+      letter-spacing: 3.35px;
+
 
   &:hover,
   &:focus,
