--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -2,9 +2,10 @@
 @include list-reset;
 
 display: flex;
-max-width: 720px;
+// max-width: 720px;
 flex-wrap: wrap;
 gap: 55px;
+justify-content: flex-end;
 cursor: pointer;
 }
 
