--- a/source/styles/blocks/tickets.scss
+++ b/source/styles/blocks/tickets.scss
@@ -11,7 +11,8 @@
   display: block;
   width: 720px;
   height: 550px;
-  background-color: antiquewhite;
+  // background-color: antiquewhite;
+  object-fit: cover;
 }
 
 .tickets__wrapper {
