--- a/source/styles/blocks/video.scss
+++ b/source/styles/blocks/video.scss
@@ -6,12 +6,14 @@
 .video__title-wrapper {
   display: flex;
   justify-content: space-between;
-  gap: 115px;
+  // gap: 115px;
   margin-bottom: 75px;
+  align-items: center;
 }
 
 .video__text {
   max-width: 720px;
+  letter-spacing: 1.17px;
 }
 
 // +++++++++++++===
