--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -9,7 +9,9 @@ margin-bottom: 75px;
 
 .contacts__wrapper {
 display: flex;
-gap: 198px;
+gap: 25px;
+justify-content: space-between;
+
 }
 
 .contacts__img {
@@ -17,6 +19,7 @@ gap: 198px;
   width: 960px;
   height: 620px;
   object-fit: contain;
+
   // background-color: antiquewhite;
 }
 
