--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -3,6 +3,10 @@
   padding-bottom: 50px;
   background-color: $color-bg-dark;
   padding-bottom: 500px;
+
+  @include media-desktop {
+    padding-top: 60px;
+  }
 }
 
 .footer__wrapper {
@@ -10,29 +14,38 @@
   align-items: flex-start;
   border-bottom: 3px solid $color-icon-line;
   padding-bottom: 47px;
- }
+
+  @include media-desktop {
+      padding-bottom: 49px;
+  }
+}
 
 .footer__nav {
   @include list-reset;
-   margin-left: 141px;
+  margin-left: 141px;
   margin-top: 6px;
 
   display: flex;
-   flex-direction: column;
+  flex-direction: column;
   gap: 29px 150px;
   flex-wrap: wrap;
 
   // justify-content: flex-start;
-    align-items: flex-start;
+  align-items: flex-start;
 
   height: 128px;
   width: 363px;
   max-width: 680px;
 
-.nav__item {
-  flex-grow: 0;
-  width: 107px;
-}
+  .nav__item {
+    flex-grow: 0;
+    width: 107px;
+  }
+
+  @include media-desktop {
+    margin-left: 40px;
+    gap: 30px 52px;
+  }
 }
 
 .footer__social {
@@ -43,6 +56,10 @@
   margin-top: auto;
   margin-left: auto;
   margin-bottom: 8px;
+
+  @include media-desktop {
+    margin-bottom: 0;
+  }
 }
 
 .footer__social-item {
