--- a/source/styles/blocks/explore.scss
+++ b/source/styles/blocks/explore.scss
@@ -2,23 +2,48 @@
   padding-top: 75px;
   padding-bottom: 75px;
   background-color: $color-bg-dark;
+
+  @include media-desktop {
+    padding-top: 60px;
+    padding-bottom: 59px;
+  }
 }
 
 .explore__title {
   margin-bottom: 75px;
+
+    @include media-desktop {
+      margin-bottom: 60px;
+    }
 }
 
 .explore__container {
   display: flex;
   gap: 60px;
+
+    @include media-desktop {
+display: block;
+    }
 }
 
 .explore__text:not(:last-child) {
   margin-bottom: 25px;
+
+  @include media-desktop {
+      margin-bottom: 0;
+    }
+}
+
+.explore__text--last {
+display: none;
 }
 
 .explore__wrapper {
   width: 660px;
+
+      @include media-desktop {
+      width: auto;
+      }
 }
 
 .explore__img {
@@ -27,6 +52,10 @@
   width: 720px;
   height: 700px;
   background-color: antiquewhite;
+
+        @include media-desktop {
+        margin: 62px auto 0;
+        }
 }
 
 .explore__color {
