--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -25,7 +25,8 @@
     width: 7px;
     height: 7px;
     border-radius: 50%;
-background-color: $color-black;  }
+    background-color: $color-black;
+  }
 }
 
 .form__label:hover input:not(:disabled) ~ .form__checkmark {
@@ -39,19 +40,26 @@ background-color: $color-black;  }
 .form__input:disabled ~ .form__checkmark {
   background-color: $color-disabled;
   border-color: $color-icon-line;
-;
 }
 
 .form__wrapper-amount {
   flex-shrink: 0;
   flex-grow: 0;
   width: 150px;
+
+  @include media-desktop {
+    width: 175px;
+  }
 }
 
 .form__wrapper-type {
   width: 270px;
   flex-shrink: 0;
   flex-grow: 0;
+
+  @include media-desktop {
+    display: none;
+  }
 }
 
 .form__wrapper-type .form__title {
@@ -61,6 +69,11 @@ background-color: $color-black;  }
 .form__wrapper-amount .form__title {
   text-align: end;
   margin-bottom: 23px;
+
+  @include media-desktop {
+    text-align: left;
+    margin-bottom: 26px;
+  }
 }
 
 .form__label {
@@ -72,7 +85,26 @@ background-color: $color-black;  }
 }
 
 .form__text {
+ @include font($size: 22px, $line-height: 38.5px, $spacing: 1.1px);
   margin-bottom: 8px;
+
+  @include media-desktop {
+
+    line-height: 36.5px;
+
+     font-size: 22px;
+    letter-spacing: 1.3px;
+      margin-bottom: 4px;
+  }
+
+  @include media-tablet {
+    font-size: 18px;
+  }
+
+  @include media-mobile {
+    font-size: 16px;
+  }
+
 }
 
 .form__wrapper-counter {
@@ -82,7 +114,11 @@ background-color: $color-black;  }
 
   display: flex;
   align-items: center;
-  gap: 27px;
+  gap: 23px;
+
+  @include media-desktop {
+    margin-bottom: 24px;
+  }
 }
 
 .form_count-btn {
@@ -120,8 +156,13 @@ input[type="number"] {
 .form__price {
   margin-top: 52px;
   text-align: end;
-    letter-spacing: 2.1px;
+  letter-spacing: 2.1px;
 
+  @include media-desktop {
+    text-align: left;
+      margin-top: 27px;
+        letter-spacing: 4px;
+  }
 }
 
 .form__btn {
@@ -133,8 +174,7 @@ input[type="number"] {
   width: 175px;
   margin-top: 62px;
   margin-left: auto;
-      letter-spacing: 3.35px;
-
+  letter-spacing: 3.35px;
 
   &:hover,
   &:focus,
@@ -142,4 +182,9 @@ input[type="number"] {
     background-color: $color-accent;
     color: $color-black;
   }
+
+    @include media-desktop {
+  margin-top: 72px;
+  letter-spacing: 4.37px;
+    }
 }
