--- a/source/styles/blocks/visiting.scss
+++ b/source/styles/blocks/visiting.scss
@@ -1,6 +1,11 @@
 .visiting {
   padding-top: 75px;
   padding-bottom: 75px;
+
+  @include media-desktop {
+    padding-top: 60px;
+    padding-bottom: 61px;
+  }
 }
 
 .visiting__list {
@@ -8,10 +13,20 @@
   display: flex;
   gap: 76px 60px;
   flex-wrap: wrap;
+
+  @include media-desktop {
+    padding-left: 108px;
+    padding-right: 108px;
+    gap: 61px 108px;
+  }
 }
 
 .visiting__title {
-margin-bottom: 75px;
+  margin-bottom: 75px;
+
+  @include media-desktop {
+    margin-bottom: 60px;
+  }
 }
 
 .visiting__card {
@@ -27,16 +42,30 @@ margin-bottom: 75px;
 }
 
 .visiting__img {
-display: block;
-width: 440px;
-height: 285px;
-margin-bottom: 26px;
+  display: block;
+  width: 440px;
+  height: 285px;
+  margin-bottom: 26px;
+
+  @include media-desktop {
+    width: 330px;
+    height: 215px;
+    margin-bottom: 27px;
+  }
 }
 
 .visiting__title-card {
   margin-bottom: 12px;
+
+  @include media-desktop {
+    margin-bottom: 10px;
+  }
 }
 
-.visiting__text:not(:last-child)  {
+.visiting__text:not(:last-child) {
   margin-bottom: 14px;
+
+  // @include media-desktop {
+  //   margin-bottom: 10px;
+  // }
 }
